--- a/GUI/Pipfile
+++ b/GUI/Pipfile
@@ -10,6 +10,7 @@ opencv-python = "==4.8.1.78"
 speechrecognition = "==3.10.1"
 panda3d = "==1.10.14"
 types-panda3d = "*"
+panda3d-blend2bam = "*"
 
 [dev-packages]
 
